--- a/.semaphore.yml
+++ b/.semaphore.yml
@@ -1,5 +1,5 @@
 version: "v3.0"
-name: Basic, 2 blocks YAML file example.
+name: A more advance YAML file
 semaphore_image: standard
 blocks:
 - build:
@@ -9,7 +9,7 @@ blocks:
             - echo $SEMAPHORE_PIPELINE_ID
         - name: 2nd job from 1st build block
           commands:
-            - echo "This is from the 2nd job of 1st build block"
+            - cat contents.txt
             - echo $SEMAPHORE_PIPELINE_ID
 - build:
       jobs:
