--- a/.semaphore.yml
+++ b/.semaphore.yml
@@ -9,12 +9,12 @@ blocks:
             - echo $SEMAPHORE_PIPELINE_ID
         - name: 2nd job from 1st build block
           commands:
-            - cat contents.txt
             - echo $SEMAPHORE_PIPELINE_ID
+            - cat contents.txt
+            - wc contents.txt
 - build:
       jobs:
         - name: Job from 2nd build block
           commands:
             - echo $SEMAPHORE_PIPELINE_ID
-            - echo "This is new"
-            - echo bar2
+            - wc contents.txt
