--- a/.semaphore.yml
+++ b/.semaphore.yml
@@ -2,8 +2,8 @@ version: "v1.0"
 name: test
 semaphore_image: standard
  blocks:
-    - build:	    
+     build:	    
       jobs:
-       - commands:
+        commands:
          - echo $SEMAPHORE_PIPELINE_ID
          - env
